lab-5-k8s/k8s/services/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: k8s-dev
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: backend-api:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
