lab-5-k8s/k8s/services/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: k8s-dev
spec:
  selector:
    app: api
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
